force-app/main/default/objects/ssot__CarePgmProvHealthcareProvider__dlm/fields/ssot__CareProgramProviderId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramProviderId__c</fullName>
    <label>Care Program Provider</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareProgramProviderId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>