force-app/main/default/objects/ssot__CarePgmProvHealthcareProvider__dlm/fields/ssot__EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveTo__c</fullName>
    <label>Effective To</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveTo</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>