force-app/main/default/objects/ssot__CarePgmProvHealthcareProvider__dlm/fields/ssot__IsPrimaryProvider__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryProvider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Provider</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryProvider</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>